# roleplay_bot

./: .gitignore  LICENSE  README.md
backend/proto/: story_writer.proto
backend/story_writer/: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  calculator.proto  conanfile.txt  story_writer.proto  vcpkg.json
backend/story_writer/proto/: CMakeLists.txt  calculator.grpc.pb.cc  calculator.grpc.pb.h  calculator.pb.cc  calculator.pb.h  story_writer.grpc.pb.cc  story_writer.grpc.pb.h  story_writer.pb.cc  story_writer.pb.h
backend/story_writer/sql/: chat_history.sql  session_metadata.sql
backend/story_writer/src/: CMakeLists.txt  client.cpp  server.cpp
backend/story_writer/src/app/: CMakeLists.txt  init_clients.cpp  init_clients.h
backend/story_writer/src/handler/: CMakeLists.txt  story_writer_service_handler.cpp  story_writer_service_handler.h
backend/story_writer/src/interceptors/: CMakeLists.txt  logging_interceptor.h
backend/story_writer/src/middleware/: CMakeLists.txt  logging_interceptor.cpp  logging_interceptor.h
backend/story_writer/src/models/: CMakeLists.txt  gemini_model.h
backend/story_writer/src/services/: CMakeLists.txt  story_writer_service.cpp  story_writer_service.h
